fix: sponsorsContainer overflow

--- a/src/app/sponsors/sponsors.module.css
+++ b/src/app/sponsors/sponsors.module.css
@@ -220,9 +220,6 @@
     transform: translateY(30px);
   }
 
-  @media screen and (max-height:656px) {
-    transform: translateY(80px);
-  }
 }
 
 .parentList::-webkit-scrollbar,
@@ -230,11 +227,7 @@
 .sponsorList::-webkit-scrollbar {
   display: none;
 }
-.sponsorList,.parentList{
-  @media screen and (max-height:656px) {
-    margin-top: 100px;
-  }
-}
+
 .page {
   padding: 5px;
   min-height: 100vh;
